--- a/android/res/layout/statusbar.xml
+++ b/android/res/layout/statusbar.xml
@@ -16,10 +16,10 @@
 		android:layout_width="wrap_content"
 		android:layout_height="fill_parent">
 	</ImageView>
-    <LinearLayout android:layout_width="match_parent" 
+    <LinearLayout android:layout_width="fill_parent" 
     	android:layout_height="wrap_content" 
     	android:orientation="vertical">
-    	<LinearLayout android:layout_width="match_parent"
+    	<LinearLayout android:layout_width="fill_parent"
 	    	android:layout_height="wrap_content"
 	    	android:orientation="horizontal">
 		    
